DBZ-7421 Encapsulate data collection queue and its json version into a dedicated class